# decaf-compiler

./: .gitignore  CMakeLists.txt  README.md  a.out  checker.sh  compile.sh  fuck.txt  gen.py  init.sh  lexer_gen.py  main.ll  main.s  playground.txt  terminals.h  test.l  目录结构.md  编译原理实验报告.docx
bak/lexer/: CMakeLists.txt  keyword.txt
data/: fake.decaf  ffake.decaf  list.decaf  more_naive.decaf  naive.decaf
data/bak/: naive_bnf.hs  token.gen.1.yxx
data/bak/examples/calc++/: CMakeLists.txt  calc++-driver.cc  calc++-driver.hh  calc++.cc
data/bak/examples/calc++/data/: hh
data/bak/lexer/: lexer.template.l  lexer_gen.py
examples/calc++/: CMakeLists.txt  calc++-parser.yy
examples/visitor_pattern/: visitor.cpp
final_build/: runtime.c
handout/: lexel.l  parser.yxx
kernel/: BbVisitor.cpp  CodegenVisitor.cpp  LoadSymbolTableVisitor.cpp  PrintVisitor.1.cpp  PrintVisitor.cpp  StaticAnalyseVisitor.cpp  SymbolTableVisitor.cpp  common.h  external.h  indent.h  internal.h  main.cpp  node_defs.h  parser.hxx  pure_common.h  test.cpp  trace.h  visitor_gen.py
kernel/drivers/: class_decl.cpp  class_decl.h  driver_helper.h  local_sym_table_defs.h  static_analyse.cpp  static_analyse.h
kernel/llvm_driver/: llvm-sample.cpp  llvm.cpp  llvm.h  llvm_driver.cpp  llvm_external.h  llvm_inc.h
kernel/static_analyse_driver/: class_decl.h  driver_helper.h  local_sym_table_defs.h
kernel/symbol_table/: class_decl.cpp  class_decl.h
lex_gen/: CMakeLists.txt  dog.l  gen.py  lex.template.l  lexer.l  lexer.template.l  lexer_gen.py  symbols.txt
lexer/: engine.py  gen.py  lexer.template.l  symbols.txt
llvm/: CMakeLists.txt  imi.ll  imitation.cpp  imitation.ll  imitation.s  main.ll  runtime.bc  runtime.c  runtime.h  runtime.ll  runtime.s  sample.cpp
llvm_playground/: CMakeLists.txt  a.out  fuck.sh  imi.ll  imi.s  imitation.cpp  runtime.bc  runtime.c  runtime.ll  runtime.s
llvm_playground/lib/: imi.ll  runtime.c  runtime.ll
llvm_playground/tmp/: main.cpp  sample.c  sample.ll  sample.s
parser/: CMakeLists.txt  answer.txt  bnf.hs  engine.py  naive_bnf.hs  parse_gen.py  parser.hxx  parser.template.yxx  parser.yxx  rules.gen.yxx  rules.hand.yxx  token.gen.yxx  token.hand.yxx  types.hand.yxx  union.gen.yxx  union.hand.yxx
parser/test/: a.py
tmp/: fuck2.txt
